welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:16: error: reassignment to val
		diag = diag + 1
                     ^